--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<h2>Winter in Finland</h2>
 				<img src="images/finland.jpg">
 				<p>			
-					During January and February, there is almost always snow in northern and eastern Finland. Even if there’s little snow in Helsinki, there’s often up to a metre or more in the northern region of Lapland.
+					During January and February, there is almost always snow in northern and eastern Finland. Even if there is little snow in Helsinki, there is often up to a metre or more in the northern region of Lapland.
 					The winter season is definitely the best session for experiencing dog-sledding in Lapland with Siberian Huskies.
 					The Siberian Husky is recognised by its thick double coat and triangular ears. Echoing the outline of a wolf, the dogs are energetic and hardy, having originated from the harsh Eastern Siberian wilderness. 
 				</p>
@@ -41,7 +41,7 @@
 				<h2>Nature in Central America</h2>
 				<img src="images/central_america.jpg">
 				<p>
-					Surrounded by the Pacific and Atlantic Oceans, the slender land bridge of Central America runs from Mexico to South America and is made up of seven countries — Guatemala, Belize, El Salvador, Honduras, Nicaragua, Costa Rica, and Panama.	
+					Surrounded by the Pacific and Atlantic Oceans, the slender land bridge of Central America runs from Mexico to South America and is made up of seven countries: Guatemala, Belize, El Salvador, Honduras, Nicaragua, Costa Rica, and Panama.	
 					The rain forests of Central America are some of the most biodiverse regions in the world, home to thousands of species of flora and fauna. 
 				</p>
 			</div>	
